<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:http="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_citas"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".CitasActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eBuscar"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:hint="Buscar"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/bbuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Buscar" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bAdd"
            android:layout_width="57dp"
            android:layout_height="59dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:scaleType="fitXY"
            http:backgroundTint="#00897B"
            app:elevation="20dp"
            app:borderWidth="0dp"
            http:layout_constraintBottom_toBottomOf="parent"
            http:layout_constraintEnd_toEndOf="parent"
            http:srcCompat="@android:drawable/ic_input_add"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteY="627dp">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>