...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/baceptar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00897B"
                android:text="CONFIRMAR" />

            <Button
...
